add managein admin

--- a/templates/admin/layouts/sidebar.html
+++ b/templates/admin/layouts/sidebar.html
@@ -59,6 +59,15 @@
                     Total user
                 </a>
             </li>
+            <li  class="active" >
+                <a
+                        href="{%url 'total_message'%}"
+                        class="nav-link"
+                >
+                <i class="fa-solid fa-message"></i>
+                    Total message
+                </a>
+            </li>
           
 
         </ul>
