--- a/templates/admin/pages/index.html
+++ b/templates/admin/pages/index.html
@@ -248,29 +248,16 @@
                 <div class="card-body">
                     <div class="d-flex align-items-center">
                         <div>
-                            <p class="mb-0 text-secondary"></p>
+                            <p class="mb-0 text-secondary">Total Message {{total_contact}}</p>
                             <h4 class="my-1 text-info"></h4>
                         </div>
-                        <div class="widgets-icons-2 rounded-circle bg-gradient-scooter text-white ms-auto">
+                        <div class="widgets-icons-2 rounded-circle bg-gradient-scooter text-white ms-auto"> <i class="fa-solid fa-message"></i>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div class="card radius-10 border-start border-0 border-3 border-info">
-                <div class="card-body">
-                    <div class="d-flex align-items-center">
-                        <div>
-                            <p class="mb-0 text-secondary"></p>
-                            <h4 class="my-1 text-info"></h4>
-                        </div>
-                        <div class="widgets-icons-2 rounded-circle bg-gradient-scooter text-white ms-auto"><i class="fa-solid fa-screwdriver-wrench"></i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+     
     </div>
 </div>
 <script src="{% static 'admin/js/jquery-3.3.1.min.js' %}"></script>
