--- a/templates/layouts/header1.html
+++ b/templates/layouts/header1.html
@@ -46,7 +46,7 @@
                            <a class="nav-link" href="{% url 'kyc'%}">KYC<span class="sr-only"></a>
                         </li>
                         <li class="nav-item">
-                           <a class="nav-link" href="{% url 'about'%}">About</a>
+                           <a class="nav-link" href="{% url 'about'%}">Instruction</a>
                         </li>
                         {% if request.user.is_authenticated %}
                         <li class="nav-item dropdown">
